# eabase

./: .gitignore  CMakeLists.txt  README.md
eabase/: CMakeLists.txt  version.h
eabase/fiber/: butex.cc  butex.h  condition_variable.cc  condition_variable.h  context.cc  context.h  countdown_event.cc  countdown_event.h  errno.cc  errno.h  execution_queue.cc  execution_queue.h  execution_queue_inl.h  fd.cc  fiber.cc  fiber.h  interrupt_pthread.cc  interrupt_pthread.h  key.cc  list_of_abafree_id.h  log.h  mutex.cc  mutex.h  offset_table.h  parking_lot.h  processor.h  remote_task_queue.h  session.cc  session.h  stack.cc  stack.h  stack_inl.h  sys_futex.cc  sys_futex.h  task_control.cc  task_control.h  task_group.cc  task_group.h  task_group_inl.h  task_meta.h  (+5 more)
eabase/rapidjson/: allocators.h  document.h  encodedstream.h  encodings.h  filereadstream.h  filewritestream.h  fwd.h  istreamwrapper.h  memorybuffer.h  memorystream.h  optimized_writer.h  ostreamwrapper.h  pointer.h  prettywriter.h  reader.h  robust_json.h  rubost_json.cc  schema.h  stream.h  stringbuffer.h  writer.h
eabase/rapidjson/internal/: biginteger.h  diyfp.h  dtoa.h  ieee754.h  itoa.h  meta.h  pow10.h  regex.h  stack.h  strfunc.h  strtod.h  swap.h
eabase/utility/: arena.cc  arena.h  at_exit.cc  at_exit.h  atomic_ref_count.h  atomic_sequence_num.h  atomicops.h  atomicops_internals_arm64_gcc.h  atomicops_internals_arm_gcc.h  atomicops_internals_atomicword_compat.h  atomicops_internals_gcc.h  atomicops_internals_loongarch64_gcc.h  atomicops_internals_mac.h  atomicops_internals_mips_gcc.h  atomicops_internals_tsan.h  atomicops_internals_x86_gcc.cc  atomicops_internals_x86_gcc.h  atomicops_internals_x86_msvc.h  auto_reset.h  base64.cc  base64.h  base64url.cc  base64url.h  base_paths.cc  basictypes.h  big_endian.cc  big_endian.h  binary_printer.cc  binary_printer.h  bit_array.h  bits.h  build_config.h  cancelable_callback.h  class_name.cc  class_name.h  comlog_sink.cc  comlog_sink.h  compat.h  compiler_specific.h  cpu.cc  (+94 more)
eabase/utility/containers/: bounded_queue.h  case_ignored_flat_map.cc  case_ignored_flat_map.h  doubly_buffered_data.h  flat_map.h  flat_map_inl.h  hash_tables.h  linked_list.h  mpsc_queue.h  mru_cache.h  pooled_map.h  scoped_ptr_hash_map.h  small_map.h  stack_container.h
eabase/utility/debug/: alias.cc  alias.h  asan_invalid_access.cc  asan_invalid_access.h  crash_logging.cc  crash_logging.h  debugger.cc  debugger.h  debugger_posix.cc  dump_without_crashing.cc  dump_without_crashing.h  leak_annotations.h  leak_tracker.h  proc_maps_linux.cc  proc_maps_linux.h  stack_trace.cc  stack_trace.h  stack_trace_posix.cc
eabase/utility/details/: extended_endpoint.hpp
eabase/utility/files/: dir_reader_fallback.h  dir_reader_linux.h  dir_reader_posix.h  dir_reader_unix.h  fd_guard.h  file.cc  file.h  file_enumerator.cc  file_enumerator.h  file_enumerator_posix.cc  file_path.cc  file_path.h  file_path_constants.cc  file_posix.cc  file_watcher.cc  file_watcher.h  memory_mapped_file.cc  memory_mapped_file.h  memory_mapped_file_posix.cc  scoped_file.cc  scoped_file.h  scoped_temp_dir.cc  scoped_temp_dir.h  temp_file.cc  temp_file.h
eabase/utility/mac/: bundle_locations.h  bundle_locations.mm  foundation_util.h  foundation_util.mm  scoped_cftyperef.h  scoped_mach_port.cc  scoped_mach_port.h  scoped_typeref.h
eabase/utility/memory/: aligned_memory.cc  aligned_memory.h  linked_ptr.h  manual_constructor.h  raw_scoped_refptr_mismatch_checker.h  ref_counted.cc  ref_counted.h  ref_counted_memory.cc  ref_counted_memory.h  scoped_open_process.h  scoped_policy.h  scoped_ptr.h  scoped_vector.h  singleton.cc  singleton.h  singleton_objc.h  singleton_on_pthread_once.h  weak_ptr.cc  weak_ptr.h
eabase/utility/numerics/: safe_conversions.h  safe_conversions_impl.h  safe_math.h  safe_math_impl.h
eabase/utility/posix/: eintr_wrapper.h  file_descriptor_shuffle.cc  file_descriptor_shuffle.h  global_descriptors.cc  global_descriptors.h
eabase/utility/strings/: latin1_string_conversions.cc  latin1_string_conversions.h  nullable_string16.cc  nullable_string16.h  safe_sprintf.cc  safe_sprintf.h  string16.cc  string16.h  string_number_conversions.cc  string_number_conversions.h  string_piece.cc  string_piece.h  string_split.cc  string_split.h  string_tokenizer.h  string_util.cc  string_util.h  string_util_constants.cc  string_util_posix.h  stringize_macros.h  stringprintf.cc  stringprintf.h  sys_string_conversions.h  sys_string_conversions_mac.mm  sys_string_conversions_posix.cc  utf_offset_string_conversions.cc  utf_offset_string_conversions.h  utf_string_conversion_utils.cc  utf_string_conversion_utils.h  utf_string_conversions.cc  utf_string_conversions.h
eabase/utility/synchronization/: cancellation_flag.cc  (+7 more)
eabase/var/: collector.cc  collector.h  default_variables.cc  gflag.cc  gflag.h  latency_recorder.cc  latency_recorder.h  multi_dimension.h  multi_dimension_inl.h  mvariable.cc  mvariable.h  passive_status.h  recorder.h  reducer.h  scoped_timer.h  status.h  status_var.h  var.h  variable.cc  variable.h  vector.h  window.h
tests/: CMakeLists.txt  aligned_memory_unittest.cc  allocator_unittest.cc  at_exit_unittest.cc  atomicops_unittest.cc  baidu_thread_local_unittest.cc  baidu_time_unittest.cc  barrier_closure_unittest.cc  base64_unittest.cc  base64url_unittest.cc  big_endian_unittest.cc  bits_unittest.cc  bounded_queue_unittest.cc  butil_unittest_main.cc  cacheline_unittest.cc  callback_helpers_unittest.cc  callback_list_unittest.cc  callback_unittest.cc  cancelable_callback_unittest.cc  cancellation_flag_unittest.cc  class_name_unittest.cc  condition_variable_unittest.cc  cpu_unittest.cc  crash_logging_unittest.cc  crc32c_unittest.cc  dir_reader_posix_unittest.cc  endpoint_unittest.cc  environment_unittest.cc  errno_unittest.cc  fd_guard_unittest.cc  fiber_butex_unittest.cc  fiber_cond_bug_unittest.cc  fiber_cond_unittest.cc  fiber_countdown_event_unittest.cc  fiber_dispatcher_unittest.cc  fiber_execution_queue_unittest.cc  fiber_fd_unittest.cc  fiber_futex_unittest.cc  fiber_id_unittest.cc  fiber_key_unittest.cc  (+104 more)
(+49 files in other folders)
